Initial adaption of meta-flir-base to yocto3.3 (hardknott)
conf/distro/flir-* adapted to hardknott (incl raised IMX_GPU_VERSION)
conf/layer.conf - claims hardknott compatibility
                  (LAYERSERIES_COMPAT_flir-base)
tools/flir-setup-release.sh - meta-boundary layer removed for now
                  (hardknott support missing for now)

--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -3,15 +3,15 @@
 ########################################################################
 DISTRO = "flir-wayland"
 DISTRO_NAME = "FlirSystem Wayland"
-DISTRO_VERSION = "3.2"
-DISTRO_CODENAME = "gatesgarth-flir-wl"
+DISTRO_VERSION = "3.3"
+DISTRO_CODENAME = "hardknott-flir-wl"
 SDK_VENDOR = "-pokysdk"
-SDK_VERSION = "3.2"
+SDK_VERSION = "3.3"
 
 MAINTAINER = "FLIR System <dev5@flir.se>"
 
 # Additional p4 tool addition - might be solved better?
-HOSTTOOLS_append = " p4"
+# HOSTTOOLS_append = " p4"
 
 ########################################################################
 # DISTRO FEATURE SELECTION
@@ -160,7 +160,7 @@ MACHINE_GSTREAMER_1_0_PLUGIN_mx7ulp = "imx-gst1.0-plugin"
 MACHINE_GSTREAMER_1_0_PLUGIN_mx8 = "imx-gst1.0-plugin"
 
 # copied from meta-imx/meta-sdk fsl-imx-preferred-env.inc / fsl-imx-base.inc: 
-IMX_GPU_VERSION            ?= "6.4.3.p1.2"
+IMX_GPU_VERSION            ?= "6.4.3.p2.0"
 IMX_GPU_VERSION_SUFFIX      = "aarch32"
 IMX_GPU_VERSION_SUFFIX_mx8  = "aarch64"
 
@@ -169,8 +169,10 @@ REMOVE_VULKAN_FEATURE = "vulkan"
 PREFERRED_VERSION_imx-gpu-viv               = "${IMX_GPU_VERSION}-${IMX_GPU_VERSION_SUFFIX}"
 PREFERRED_VERSION_kernel-module-imx-gpu-viv = "${IMX_GPU_VERSION}"
 PREFERRED_VERSION_imx-gpu-g2d               = "${IMX_GPU_VERSION}"
+PREFERRED_VERSION_libgpuperfcnt             = "${IMX_GPU_VERSION}"
 
-PREFERRED_PROVIDER_opencl-headers_imx = "imx-gpu-viv"
+PREFERRED_PROVIDER_opencl-headers_imxgpu = "imx-gpu-viv"
+PREFERRED_PROVIDER_opencl-icd-loader_imxgpu = "imx-gpu-viv"
 
 PREFERRED_VERSION_gstreamer1.0-plugins-base = "1.18.0.imx"
 PREFERRED_VERSION_gstreamer1.0-plugins-bad  = "1.18.0.imx"
@@ -186,3 +188,6 @@ PREFERRED_VERSION_opengl-es-cts_mx7 = "3.2.4.0"
 require conf/distro/include/yocto-uninative.inc
 require conf/distro/include/security_flags.inc
 INHERIT += "uninative"
+
+MACHINE_EXTRA_RRECOMMENDS_remove = "nxp-wlan-sdk"
+MACHINE_FEATURES_remove = "kernel-module-nxp89xx"
