flir-wayland.conf: Set preferred provider on mfgtool
Without this set, you get warnings about multiple providers;
linux-fslc-mfgtool, linux-imx-mfgtool

We prefer (?) the imx version

--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -63,6 +63,10 @@ PREFERRED_PROVIDER_udev-systemd ?= "systemd"
 PREFERRED_PROVIDER_udev-utils ?= "systemd"
 #PREFERRED_VERSION_gnupg ?= "2.2.4"
 
+PREFERRED_RPROVIDER_mfgtool-image = "linux-imx-mfgtool"
+PREFERRED_RPROVIDER_mfgtool-base = "linux-imx-mfgtool"
+PREFERRED_RPROVIDER_mfgtool-image-uimage = "linux-imx-mfgtool"
+
 DEFAULT_TIMEZONE = "Europe/Paris"
 
 # maximum allowed rootfs size in kB
