--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -185,6 +185,8 @@ PREFERRED_VERSION_opengl-es-cts     = "3.2.6.1"
 PREFERRED_VERSION_opengl-es-cts_mx6 = "3.2.4.0"
 PREFERRED_VERSION_opengl-es-cts_mx7 = "3.2.4.0"
 
+PREFERRED_VERSION_opencv_mx6 = "4.4.0.imx"
+
 require conf/distro/include/yocto-uninative.inc
 require conf/distro/include/security_flags.inc
 INHERIT += "uninative"
