--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -109,6 +109,7 @@ SANITY_TESTED_DISTROS ?= " \
             ubuntu-20.04 \n \
             linuxmint-20 \n \
             linuxmint-20.1 \n \
+            linuxmint-20.2 \n \
             fedora-28 \n \
             fedora-29 \n \
             fedora-30 \n \
