--- a/conf/machine/evco.conf
+++ b/conf/machine/evco.conf
@@ -23,10 +23,10 @@ MACHINEOVERRIDES =. "mx6:mx6dl:"
 PREFERRED_PROVIDER_u-boot_evco = "u-boot-imx"
 PREFERRED_PROVIDER_virtual/bootloader_evco = "u-boot-imx"
 UBOOT_CONFIG ??= "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'sd-optee', 'sd', d)}"
-UBOOT_CONFIG[sd] = "mx6qpsabresd_config,sdcard"
-UBOOT_CONFIG[sata] = "mx6qpsabresd_sata_config"
-UBOOT_CONFIG[mfgtool] = "mx6qpsabresd_config"
-UBOOT_CONFIG[sd-optee] = "mx6qpsabresd_optee_config,sdcard"
+#UBOOT_CONFIG[sd] = "mx6qpsabresd_config,sdcard"
+#UBOOT_CONFIG[sata] = "mx6qpsabresd_sata_config"
+#UBOOT_CONFIG[mfgtool] = "mx6qpsabresd_config"
+#UBOOT_CONFIG[sd-optee] = "mx6qpsabresd_optee_config,sdcard"
 
 PREFERRED_PROVIDER_virtual/kernel_evco = "linux-pingu"
 PREFERRED_VERSION_linux-pingu = "5.10%"
