--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -3,7 +3,7 @@
 ########################################################################
 DISTRO = "flir-wayland"
 DISTRO_NAME = "FlirSystem Wayland"
-DISTRO_VERSION = "3.3"
+DISTRO_VERSION = "3.3.2"
 DISTRO_CODENAME = "hardknott-flir-wl"
 SDK_VENDOR = "-pokysdk"
 SDK_VERSION = "3.3"
@@ -165,7 +165,7 @@ MACHINE_GSTREAMER_1_0_PLUGIN_mx7ulp = "imx-gst1.0-plugin"
 MACHINE_GSTREAMER_1_0_PLUGIN_mx8 = "imx-gst1.0-plugin"
 
 # copied from meta-imx/meta-sdk fsl-imx-preferred-env.inc / fsl-imx-base.inc: 
-IMX_GPU_VERSION            ?= "6.4.3.p2.0"
+IMX_GPU_VERSION            ?= "6.4.3.p2.2"
 IMX_GPU_VERSION_SUFFIX      = "aarch32"
 IMX_GPU_VERSION_SUFFIX_mx8  = "aarch64"
 
@@ -186,11 +186,12 @@ PREFERRED_VERSION_gstreamer1.0-plugins-good-qt = "1.18.0.imx"
 PREFERRED_VERSION_gstreamer1.0              = "1.18.0.imx"
 PREFERRED_VERSION_gstreamer1.0-libav        = "1.18.0"
 
-PREFERRED_VERSION_opengl-es-cts     = "3.2.6.1"
+PREFERRED_VERSION_imx-gst1.0-plugin     = "4.6.2"
+
 PREFERRED_VERSION_opengl-es-cts_mx6 = "3.2.4.0"
 PREFERRED_VERSION_opengl-es-cts_mx7 = "3.2.4.0"
 
-PREFERRED_VERSION_opencv_mx6 = "4.4.0.imx"
+PREFERRED_VERSION_opencv_mx6 = "4.5.2.imx"
 
 require conf/distro/include/yocto-uninative.inc
 require conf/distro/include/security_flags.inc
