haproxy: same settings for all MACHINES [CIRRUS-631]
Use original ec501 setup for all (currently no MACHINE specific files)
haproxy servers are now run as "haproxy" user
haproxy folders are now owned by "haproxy" user

--- a/recipes-flir/haproxy/files/haproxy.cfg
+++ b/recipes-flir/haproxy/files/haproxy.cfg
@@ -1,7 +1,7 @@
 global
-#    user        haproxy
-#    group       haproxy
-#    pidfile     /var/run/haproxy/haproxy.pid
+    user        haproxy
+    group       haproxy
+    pidfile     /var/run/haproxy/haproxy.pid
     maxconn     4096 # Total Max Connections. This is dependent on ulimit
     nbproc      1
     tune.ssl.default-dh-param 2048 # recommended...
@@ -17,19 +17,16 @@ backend api_backend
 
 backend mjpg_backend
     balance roundrobin
-    timeout server 30000
     timeout connect 4000
     server apiserver 127.0.0.1:14012 weight 1 maxconn 1024 check
 
 backend avc_backend
     balance roundrobin
-    timeout server 30000
     timeout connect 4000
     server apiserver 127.0.0.1:14012 weight 1 maxconn 1024 check
 
 backend mpeg4_backend
     balance roundrobin
-    timeout server 30000
     timeout connect 4000
     server apiserver 127.0.0.1:14012 weight 1 maxconn 1024 check
 
