--- a/recipes-flir/haproxy/files/ssl/haproxy_ssl.cfg
+++ b/recipes-flir/haproxy/files/ssl/haproxy_ssl.cfg
@@ -1,7 +1,8 @@
 global
-#    user        haproxy
-#    group       haproxy
-#    pidfile     /var/run/haproxy_ssl/haproxy_ssl.pid
+    user        haproxy
+    group       haproxy
+
+    pidfile     /var/run/haproxy_ssl/haproxy_ssl.pid
     maxconn     4096 # Total Max Connections. This is dependent on ulimit
     nbproc      1
     tune.ssl.default-dh-param 2048 # recommended...
