--- a/recipes-connectivity/uMTP-responder/files/umtprd-sd.conf
+++ b/recipes-connectivity/uMTP-responder/files/umtprd-sd.conf
@@ -11,6 +11,7 @@ loop_on_disconnect 1
 #Syntax : storage "PATH" "NAME"
 
 storage "/FLIR/images"      "Images"
+storage "/media/autofs/mmcblk1p1"      "SDcard"
 #storage "/home"  "home folder"
 
 # Set the USB manufacturer string
