Add wayland env variables

--- a/recipes-flir/appcore/files/flirapp.service
+++ b/recipes-flir/appcore/files/flirapp.service
@@ -12,6 +12,8 @@ ExecStop=/usr/bin/killall -HUP appcore
 KillMode=control-group
 TimeoutStopSec=10
 Environment=LD_LIBRARY_PATH=/FLIR/usr/lib
+Environment=XDG_SESSION_TYPE=wayland
+Environment=XDG_RUNTIME_DIR=/run/user/0
 Group=userdata
 
 [Install]
