Add support for kxtj3-1057 and bm1422 on boards evlc4, evio2, leif4
Add driver modules for kxtj3 and bm1422 and make them load automatically on
startup.

Also add two new dtb files: imx6dl-evco2-ea.dtb that includes ec101-e and
evco2-a, and imx6dl-leco4-ea.dtb that includes ec101-e and leif4-a.

Enable the u-boot-script recipe that installs select-fdt.uscr and
update-fdt.uscr in rootfs.

[EXXT5T8XX-7009][EXXT5T8XX-7010][EXXT5T8XX-6981][EXXT5T8XX-6982]

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -17,8 +17,8 @@ BBFILES_DYNAMIC += " \
     meta-fsl-bsp-release:${LAYERDIR}/dynamic-layers/meta-fsl-bsp-release/*/*/*.bb \
     meta-fsl-bsp-release:${LAYERDIR}/dynamic-layers/meta-fsl-bsp-release/*/*/*.bbappend \
         \
-    meta-freescale:${LAYERDIR}/dynamic-layers/meta-freescale/*/*/*.bb \
-    meta-freescale:${LAYERDIR}/dynamic-layers/meta-freescale/*/*/*.bbappend \
+    freescale-layer:${LAYERDIR}/dynamic-layers/meta-freescale/*/*/*.bb \
+    freescale-layer:${LAYERDIR}/dynamic-layers/meta-freescale/*/*/*.bbappend \
         \
     qt5-layer:${LAYERDIR}/dynamic-layers/qt5-layer/*/*/*.bb \
     qt5-layer:${LAYERDIR}/dynamic-layers/qt5-layer/*/*/*.bbappend \
@@ -26,3 +26,8 @@ BBFILES_DYNAMIC += " \
 
 # BBMASK += "/meta-fsl-bsp-release/imx/meta-bsp/recipes-security/*"
 BBMASK += "/meta-boundary/recipes-connectivity/bluez5/*"
+
+BBMASK += "/meta-flir-base/dynamic-layers/meta-freescale/recipes-bsp/u-boot/u-boot-fw-utils_2018.03.bb"
+BBMASK += "/meta-flir-base/dynamic-layers/meta-freescale/recipes-bsp/u-boot/u-boot-manufacturing_2018.03.bb"
+BBMASK += "/meta-flir-base/dynamic-layers/meta-freescale/recipes-bsp/u-boot/u-boot-preloaded_2018.03.bb"
+BBMASK += "/meta-flir-base/dynamic-layers/meta-freescale/recipes-bsp/u-boot/u-boot-imx_2018.03.bbappend"
