--- a/conf/machine/evco.conf
+++ b/conf/machine/evco.conf
@@ -54,7 +54,9 @@ MACHINE_EXTRA_RRECOMMENDS_remove = "kernel-module-nxp89xx linux-firmware-nxp89xx
 KERNEL_DEVICETREE = "imx6dl-${MACHINE}.dtb \
 		     imx6dl-${MACHINE}-db.dtb \
 		     imx6dl-${MACHINE}-eb.dtb \
+		     imx6dl-${MACHINE}2-ea.dtb \
 		     imx6dl-leco-ea.dtb \
+		     imx6dl-leco4-ea.dtb \
 		     imx6dl-leco.dtb \
 		     imx6dl-svco.dtb \
 		     imx6dl-detcal.dtb \
