HABA-233 flirone wireless f1g4 image
Add:
* skylab
* libturbojpeg
* zeromq

Remove:
* videorender
* qt
* wayland/weston
* bootlogo
* chargelogo
* gstreamer

--- a/recipes-flir/appcore/f1g4/flirapp.conf
+++ b/recipes-flir/appcore/f1g4/flirapp.conf
@@ -1,7 +1,2 @@
 [Unit]
-After=connman.service systemd-journald.service progressapp.service videorender.service
-
-[Service]
-Environment=QT_QPA_EGLFS_FB=/dev/fb0
-Environment=XDG_SESSION_TYPE=wayland
-Environment=XDG_RUNTIME_DIR=/run/user/0
+After=connman.service systemd-journald.service skylab.service
