flirapp: adapted servicefile for facet/weston [CIRRUS-714]

--- a/recipes-flir/appcore/files/flirapp_weston_add.conf
+++ b/recipes-flir/appcore/files/flirapp_weston_add.conf
@@ -2,6 +2,7 @@
 [Service]
 Environment=XDG_SESSION_TYPE=wayland
 Environment=XDG_RUNTIME_DIR=/run/user/0
+Environment=QT_PLUGIN_PATH=/usr/lib/plugins
 
 [Unit]
 After=weston.service
