Supress qml warning related to internal api change in Qt5 v5.15
See https://github.com/qt/qtdeclarative/commit/a2eef6b511988b2435c4e39b6b5551e857ce7775
and discussion in https://bitbucketcommercial.flir.com/projects/CAMAPP/repos/camapps/pull-requests/996/overview

Supresses warning to syslog due to needed facet source compatibility with
both Qt5 v5.3 AND Qt5 v5.15.
(this warning is then hard to supress in another way than using environment)

--- a/recipes-flir/appcore/files/ec201/flirapp.conf
+++ b/recipes-flir/appcore/files/ec201/flirapp.conf
@@ -3,3 +3,4 @@ After=connman.service systemd-journald.service progressapp.service videorender.s
 
 [Service]
 Environment=QT_QPA_EGLFS_FB=/dev/fb0
+Environment=QT_LOGGING_RULES=qt.qml.connections=false
