Copy base recipe from u-boot-imx as start for u-boot-pingu v21.04.
- machine/evco.conf working. Now uses u-boot-pingu as u-boot.

--- a/conf/machine/evco.conf
+++ b/conf/machine/evco.conf
@@ -11,18 +11,27 @@ MACHINE_FIRMWARE_append_mx6 = " linux-firmware-ath6k"
 MACHINE_FEATURES += "pci wifi bluetooth"
 # removed from sabresd-common's MACHINE_FEATURES:  bcm4339 bcm43455
 
+# For eoco
+#MACHINEOVERRIDES =. "mx6:mx6q:mx6dl:"
 MACHINEOVERRIDES =. "mx6:mx6dl:"
 
 # FIXME: Switch over to our own u-boot-pingu
-#PREFERRED_PROVIDER_u-boot_evco = "u-boot-pingu"
-#PREFERRED_PROVIDER_virtual/bootloader_evco = "u-boot-pingu"
+UBOOT_MACHINE = "flir_mx6ec101_config"
+PREFERRED_PROVIDER_u-boot_evco = "u-boot-pingu"
+PREFERRED_PROVIDER_virtual/bootloader_evco = "u-boot-pingu"
+PREFERRED_RPROVIDER_u-boot-default-env = "u-boot-imx-mfgtool"
+PREFERRED_PROVIDER_u-boot-default-env = "u-boot-imx-mfgtool"
+UBOOT_MAKE_TARGET = "u-boot.imx"
+UBOOT_MAKE_TARGET_pn-u-boot-pingu = "u-boot.imx"
+#UBOOT_SUFFIX_pn-u-boot-pingu = "imx"
+
 #PREFERRED_PROVIDER_u-boot-fw-utils_evco = "u-boot-fw-utils-pingu"
 
 # FIXME: Only while not building our own u-boot-pingu
 #UBOOT_MACHINE = "mx6sabresd_config"
-PREFERRED_PROVIDER_u-boot_evco = "u-boot-imx"
-PREFERRED_PROVIDER_virtual/bootloader_evco = "u-boot-imx"
-UBOOT_CONFIG ??= "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'sd-optee', 'sd', d)}"
+#PREFERRED_PROVIDER_u-boot_evco = "u-boot-imx"
+#PREFERRED_PROVIDER_virtual/bootloader_evco = "u-boot-imx"
+#UBOOT_CONFIG ??= "${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'sd-optee', 'sd', d)}"
 #UBOOT_CONFIG[sd] = "mx6qpsabresd_config,sdcard"
 #UBOOT_CONFIG[sata] = "mx6qpsabresd_sata_config"
 #UBOOT_CONFIG[mfgtool] = "mx6qpsabresd_config"
@@ -35,8 +44,14 @@ KERNEL_IMAGETYPE = "uImage"
 
 # Platform u-boot settings
 UBOOT_ENTRYPOINT = "0x10800000"
-UBOOT_SUFFIX = "imx"
-#UBOOT_MACHINE ?= "ec101_config"
+### u-boot-imx settings ###
+# The u-boot-imx does not provide unified functionality for DL/Q/QP SoC
+# variants. Change the defconfig to the targeted SoC variant.
+#SPL_BINARY_pn-u-boot-imx = ""
+#UBOOT_MACHINE_pn-u-boot-imx ?= "mx6qsabresd_defconfig"
+#UBOOT_MAKE_TARGET_pn-u-boot-imx = "u-boot.imx"
+#UBOOT_SUFFIX_pn-u-boot-imx = "imx"
+#UBOOT_SUFFIX = "imx"
 
 # Firmware
 MACHINE_FIRMWARE ?= ""
