flir-wayland.conf: Add also linuxmint-20.3 as sanity tested distro
Yocto bitbake seems to work fine at my host after updating to
linuxmint 20.3
(however, a clean build is recommended as there are issues with "qa"
 build steps not finding files in
 "...manifest-x86_64_linuxmint-20.3-pseudo-native.populate_sysroot..."
 if previously built with another distro)

--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -114,6 +114,7 @@ SANITY_TESTED_DISTROS ?= " \
             linuxmint-20 \n \
             linuxmint-20.1 \n \
             linuxmint-20.2 \n \
+            linuxmint-20.3 \n \
             fedora-28 \n \
             fedora-29 \n \
             fedora-30 \n \
