HABA-261 Add cppzmq to ec401w

--- a/conf/machine/ec401w.conf
+++ b/conf/machine/ec401w.conf
@@ -3,9 +3,7 @@
 #@SOC: i.MX7ULP
 #@DESCRIPTION: Machine configuration for FLIR One Gen 4 based products.
 
-
 MACHINEOVERRIDES =. "mx7:mx7ulp:"
-
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa7.inc
 
@@ -15,8 +13,8 @@ KERNEL_DEVICETREE += "imx7ulp-sherlock.dtb"
 KERNEL_DEVICETREE += "imx7ulp-sherlock-a.dtb"
 KERNEL_DEVICETREE += "imx7ulp-sherlock-b.dtb"
 
-UBOOT_CONFIG ??= "ec401w"
-UBOOT_CONFIG[ec401w] = "mx7ulp_ec401w_config"
+UBOOT_CONFIG ??= "ec201"
+UBOOT_CONFIG[ec201] = "mx7ulp_ec201_config"
 
 MACHINE_SOCARCH_SUFFIX = "-mx7ulp"
 MACHINE_SOCARCH_FILTER_append_mx7ulp = "virtual/libopenvg virtual/libgles1 virtual/libgles2 virtual/egl virtual/mesa virtual/libgl virtual/libg2d"
