yocto 3.3.3 - adapted to use updated external package versions
flir-wayland distro:
DISTRO_VERSION -> 3.3.3 (see poky)
IMX_GPU_VERSION -> "6.4.3.p2.4" ("6.4.3.p2.2")
PREFERRED_VERSION_gstreamer1.0-... -> "1.18.5.imx" ("1.18.0.imx")
PREFERRED_VERSION_imx-gst1.0-plugin -> "4.6.3" ("4.6.2")
SDKPATHINSTALL (new from poky 3.3.3) - set to /opt/poky/${SDK_VERSION}

gstreamer .bbappends :
Patches applies to new gst version also

u-boot:  Updated meta-freescale layer renamed a file;
u-boot-imx-common.inc -> u-boot-imx-common_${PV}.inc (PV = 2021.04)

--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -3,10 +3,11 @@
 ########################################################################
 DISTRO = "flir-wayland"
 DISTRO_NAME = "FlirSystem Wayland"
-DISTRO_VERSION = "3.3.2"
+DISTRO_VERSION = "3.3.3"
 DISTRO_CODENAME = "hardknott-flir-wl"
 SDK_VENDOR = "-pokysdk"
 SDK_VERSION = "3.3"
+SDKPATHINSTALL = "/opt/poky/${SDK_VERSION}"
 
 MAINTAINER = "FLIR System <dev5@flir.se>"
 
@@ -166,7 +167,7 @@ MACHINE_GSTREAMER_1_0_PLUGIN_mx7ulp = "imx-gst1.0-plugin"
 MACHINE_GSTREAMER_1_0_PLUGIN_mx8 = "imx-gst1.0-plugin"
 
 # copied from meta-imx/meta-sdk fsl-imx-preferred-env.inc / fsl-imx-base.inc: 
-IMX_GPU_VERSION            ?= "6.4.3.p2.2"
+IMX_GPU_VERSION            ?= "6.4.3.p2.4"
 IMX_GPU_VERSION_SUFFIX      = "aarch32"
 IMX_GPU_VERSION_SUFFIX_mx8  = "aarch64"
 
@@ -180,14 +181,16 @@ PREFERRED_VERSION_libgpuperfcnt             = "${IMX_GPU_VERSION}"
 PREFERRED_PROVIDER_opencl-headers_imxgpu = "imx-gpu-viv"
 PREFERRED_PROVIDER_opencl-icd-loader_imxgpu = "imx-gpu-viv"
 
-PREFERRED_VERSION_gstreamer1.0-plugins-base = "1.18.0.imx"
-PREFERRED_VERSION_gstreamer1.0-plugins-bad  = "1.18.0.imx"
-PREFERRED_VERSION_gstreamer1.0-plugins-good = "1.18.0.imx"
-PREFERRED_VERSION_gstreamer1.0-plugins-good-qt = "1.18.0.imx"
-PREFERRED_VERSION_gstreamer1.0              = "1.18.0.imx"
-PREFERRED_VERSION_gstreamer1.0-libav        = "1.18.0"
+PREFERRED_VERSION_gstreamer1.0-plugins-base = "1.18.5.imx"
+PREFERRED_VERSION_gstreamer1.0-plugins-bad  = "1.18.5.imx"
+PREFERRED_VERSION_gstreamer1.0-plugins-good = "1.18.5.imx"
+PREFERRED_VERSION_gstreamer1.0-plugins-good-qt = "1.18.5.imx"
+PREFERRED_VERSION_gstreamer1.0-plugins-ugly = "1.18.5"
+PREFERRED_VERSION_gstreamer1.0              = "1.18.5.imx"
+PREFERRED_VERSION_gstreamer1.0-libav        = "1.18.5"
+PREFERRED_VERSION_gstreamer1.0-rtsp-server  = "1.18.5"
 
-PREFERRED_VERSION_imx-gst1.0-plugin     = "4.6.2"
+PREFERRED_VERSION_imx-gst1.0-plugin     = "4.6.3"
 
 PREFERRED_VERSION_opengl-es-cts_mx6 = "3.2.4.0"
 PREFERRED_VERSION_opengl-es-cts_mx7 = "3.2.4.0"
