skylab: Add parameter to cmd to run
Reduce verbosity of streamserver

--- a/recipes-flir/skylab/files/skylab-cmd.service
+++ b/recipes-flir/skylab/files/skylab-cmd.service
@@ -7,6 +7,7 @@ Type=simple
 ExecStart=/usr/bin/skylab-cmd \
 			      --verbosity=5 \
 			      --server-connect-endpoint=tcp://127.0.0.1:5552 \
+				  --appcoregw-connect-endpoint=tcp://127.0.0.1:5553 \
 			      --client-bind-endpoint=tcp://*:5551
 Restart=on-failure
 
