--- a/recipes-connectivity/btload/files/btload.service
+++ b/recipes-connectivity/btload/files/btload.service
@@ -1,12 +1,14 @@
 [Unit]
 Description=Bluetooth loader
-After=wlanload.service dbus.service 
-Before=bluetooth.service dbus-org.bluez.service
+After=connman.service dbus.service bluetooth.service
+
 
 [Service]
 Type=oneshot
+# We need to give bluetooth.service some time to get started to avoid failures (https://github.com/RPi-Distro/pi-bluetooth/issues/8)
+ExecStartPre=/bin/sleep 2 
 ExecStart=/sbin/btload
 RemainAfterExit=yes
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=bluetooth.target
