--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -17,8 +17,8 @@ BBFILES_DYNAMIC += " \
     meta-fsl-bsp-release:${LAYERDIR}/dynamic-layers/meta-fsl-bsp-release/*/*/*.bb \
     meta-fsl-bsp-release:${LAYERDIR}/dynamic-layers/meta-fsl-bsp-release/*/*/*.bbappend \
         \
-    freescale-layer:${LAYERDIR}/dynamic-layers/meta-freescale/*/*/*.bb \
-    freescale-layer:${LAYERDIR}/dynamic-layers/meta-freescale/*/*/*.bbappend \
+    fsl-bsp-release:${LAYERDIR}/dynamic-layers/meta-imx/meta-bsp/*/*/*.bb \
+    fsl-bsp-release:${LAYERDIR}/dynamic-layers/meta-imx/meta-bsp/*/*/*.bbappend \
         \
     qt5-layer:${LAYERDIR}/dynamic-layers/qt5-layer/*/*/*.bb \
     qt5-layer:${LAYERDIR}/dynamic-layers/qt5-layer/*/*/*.bbappend \
@@ -26,8 +26,3 @@ BBFILES_DYNAMIC += " \
 
 # BBMASK += "/meta-fsl-bsp-release/imx/meta-bsp/recipes-security/*"
 BBMASK += "/meta-boundary/recipes-connectivity/bluez5/*"
-
-BBMASK += "/meta-flir-base/dynamic-layers/meta-freescale/recipes-bsp/u-boot/u-boot-fw-utils_2018.03.bb"
-BBMASK += "/meta-flir-base/dynamic-layers/meta-freescale/recipes-bsp/u-boot/u-boot-manufacturing_2018.03.bb"
-BBMASK += "/meta-flir-base/dynamic-layers/meta-freescale/recipes-bsp/u-boot/u-boot-preloaded_2018.03.bb"
-BBMASK += "/meta-flir-base/dynamic-layers/meta-freescale/recipes-bsp/u-boot/u-boot-imx_2018.03.bbappend"
