wlanload: Increase number of leases
Only one lease was causing connectivity issues with phone

--- a/recipes-connectivity/wlanload/files/ec401w/udhcpd.conf
+++ b/recipes-connectivity/wlanload/files/ec401w/udhcpd.conf
@@ -1,13 +1,13 @@
 # udhcpd config for p2p wifi
 start 		192.168.0.2
-end		192.168.0.2
+end		192.168.0.255
 
 # The interface that udhcpd will use
 interface	wlan0
 
 # The maximim number of leases (includes addressesd reserved
 # by OFFER's, DECLINE's, and ARP conficts
-max_leases	1		#default: 254
+#max_leases	254		#default: 254
 
 
 # If remaining is true (default), udhcpd will store the time
