--- a/conf/machine/ec201.conf
+++ b/conf/machine/ec201.conf
@@ -9,6 +9,9 @@ MACHINEOVERRIDES =. "mx7:mx7ulp:"
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa7.inc
 
+PREFERRED_PROVIDER_virtual/kernel_ec201 = "linux-pingu"
+PREFERRED_VERSION_linux-pingu = "4.14%"
+
 MACHINE_FEATURES += "wifi bluetooth"
 
 KERNEL_DEVICETREE += "imx7ulp-sherlock.dtb"
