--- a/conf/machine/ec401w.conf
+++ b/conf/machine/ec401w.conf
@@ -7,6 +7,9 @@ MACHINEOVERRIDES =. "mx7:mx7ulp:"
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa7.inc
 
+PREFERRED_PROVIDER_virtual/kernel_ec401w = "linux-pingu"
+PREFERRED_VERSION_linux-pingu = "4.14%"
+
 MACHINE_FEATURES += "wifi bluetooth"
 
 KERNEL_DEVICETREE += "imx7ulp-sherlock.dtb"
