--- a/conf/machine/rebb.conf
+++ b/conf/machine/rebb.conf
@@ -9,6 +9,9 @@ MACHINEOVERRIDES =. "mx7:mx7ulp:"
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa7.inc
 
+PREFERRED_PROVIDER_virtual/kernel_rebb = "linux-pingu"
+PREFERRED_VERSION_linux-pingu = "4.14%"
+
 KERNEL_DEVICETREE += "imx7ulp-rebb.dtb"
 
 UBOOT_CONFIG ??= "rebb"
