Fix eoco configuration to build fw_ commands.

--- a/conf/machine/eoco.conf
+++ b/conf/machine/eoco.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
 #@NAME: Flir Systems Eowyn Board
-#@SOC: i.MX6DL
+#@SOC: i.MX6QP
 #@DESCRIPTION: Machine configuration for Flir Systems EOCO Board
 
 # From imx6sabresd-common.inc:
@@ -11,7 +11,7 @@ MACHINE_FIRMWARE_append_mx6 = " linux-firmware-ath6k"
 MACHINE_FEATURES += "pci wifi bluetooth"
 # removed from sabresd-common's MACHINE_FEATURES:  bcm4339 bcm43455
 
-MACHINEOVERRIDES =. "mx6:mx6dl:mx6qp"
+MACHINEOVERRIDES =. "mx6:mx6dl:mx6qp:"
 
 # FIXME: Switch over to our own u-boot-pingu
 UBOOT_MACHINE = "flir_eoco_config"
