Initial yocto3.3 ec201 support [HABA-448]
flir-image now builds for MACHINE ec201
(ec401w not fully supported for now)

Note the following:
u-boot:
- u-boot-imx 2021.04 as of meta-imx built with mx7ulp_ec201_config
  (not ec201), only to pass build
- (u-boot-imx 2018.03 does not build with y3.3)

linux-pingu:
- uses a special branch in linux-pingu54
- In this branch, device tree is a true copy of yocto2.5 variant.
  kernel+devicetree then builds
- The applied, rebased FLIR 4.14 kernel commits SHOULD NOT be added 'as is'
  to FLIR_lf-5.10.y (FLIR official 5.10 branch), as evco is then
  "destroyed" (specifically lcd and "flir cam" will fail, probably more)
  How the kernel works for ec201 remains to be seen

rpmsg-bifrost:
- Added support for 5.10 kernel (time structs, fallthrough)
- (A few recipe updates onto yocto2.5 branch are added implicitely)

data-collection:
- Does not build (needs additions from camapps development fed back to
  build with gcc 10).
- Not part of flir-image anyway

videorender:
- Does not build yet (data-collection req)
- Not part of flir-image anyway

lepton-m4:
- Added to flir-image. re-imported recipe from yocto2.5 branch. works?
- meta-flir-internal recipe - the used recipe when both base and internal
  is present.
  Note that the version of recipe that exists in meta-flir-internal
  is NOT the latest one.
  The "latest one" does not build (cmake problem)

--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -196,6 +196,7 @@ PREFERRED_VERSION_opengl-es-cts_mx6 = "3.2.4.0"
 PREFERRED_VERSION_opengl-es-cts_mx7 = "3.2.4.0"
 
 PREFERRED_VERSION_opencv_mx6 = "4.5.2.imx"
+PREFERRED_VERSION_opencv_mx7 = "4.5.2.imx"
 
 require conf/distro/include/yocto-uninative.inc
 require conf/distro/include/security_flags.inc
