--- a/conf/machine/ec201.conf
+++ b/conf/machine/ec201.conf
@@ -9,15 +9,29 @@ MACHINEOVERRIDES =. "mx7:mx7ulp:"
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa7.inc
 
+PREFERRED_PROVIDER_virtual/kernel_ec201 = "linux-pingu"
+PREFERRED_VERSION_linux-pingu = "5.10%"
+
 MACHINE_FEATURES += "wifi bluetooth"
 
 KERNEL_DEVICETREE += "imx7ulp-sherlock.dtb"
 KERNEL_DEVICETREE += "imx7ulp-sherlock-a.dtb"
 KERNEL_DEVICETREE += "imx7ulp-sherlock-b.dtb"
 
-UBOOT_CONFIG ??= "ec201"
-UBOOT_CONFIG[ec201] = "mx7ulp_ec201_config"
+#UBOOT_CONFIG ??= "ec201"
+#UBOOT_CONFIG[ec201] = "mx7ulp_ec201_config"
 
+UBOOT_MAKE_TARGET = "u-boot.imx"
+UBOOT_SUFFIX = "imx"
+
+UBOOT_CONFIG ??= " \
+    sd \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'sd-optee', '', d)} \
+"
+UBOOT_CONFIG[sd]       = "mx7ulp_evk_config,sdcard"
+UBOOT_CONFIG[sd-optee] = "mx7ulp_evk_optee_config,sdcard"
+UBOOT_CONFIG[emmc]     = "mx7ulp_evk_emmc_config,sdcard"
+UBOOT_CONFIG[mfgtool]  = "mx7ulp_evk_config"
 
 MACHINE_SOCARCH_SUFFIX = "-mx7ulp"
 MACHINE_SOCARCH_FILTER_append_mx7ulp = "virtual/libopenvg virtual/libgles1 virtual/libgles2 virtual/egl virtual/mesa virtual/libgl virtual/libg2d"
@@ -26,3 +40,5 @@ IMX_DEFAULT_KERNEL_mx7ulp = "linux-imx"
 
 # Set Serial console
 SERIAL_CONSOLES = "115200;ttyLP0"
+
+IMAGE_FSTYPES = "tar.gz ext4"
