ec401w: HABA-264 HABA-521 Add u-boot and devicetree
kernel: Add separate devicetree for ec401w board. Similar to ec201
board with removed components, such as screen, touch, tourch etc.

u-boot: Add board support for ec401w

Remove display functionality in u-boot chargeapp and recovery check

--- a/conf/machine/ec401w.conf
+++ b/conf/machine/ec401w.conf
@@ -12,12 +12,10 @@ PREFERRED_VERSION_linux-pingu = "4.14%"
 
 MACHINE_FEATURES += "wifi bluetooth"
 
-KERNEL_DEVICETREE += "imx7ulp-sherlock.dtb"
-KERNEL_DEVICETREE += "imx7ulp-sherlock-a.dtb"
-KERNEL_DEVICETREE += "imx7ulp-sherlock-b.dtb"
+KERNEL_DEVICETREE += "imx7ulp-ec401w.dtb"
 
-UBOOT_CONFIG ??= "ec201"
-UBOOT_CONFIG[ec201] = "mx7ulp_ec201_config"
+UBOOT_CONFIG ??= "ec401w"
+UBOOT_CONFIG[ec401w] = "mx7ulp_ec401w_config"
 
 MACHINE_SOCARCH_SUFFIX = "-mx7ulp"
 MACHINE_SOCARCH_FILTER_append_mx7ulp = "virtual/libopenvg virtual/libgles1 virtual/libgles2 virtual/egl virtual/mesa virtual/libgl virtual/libg2d"
