--- a/recipes-flir/skylab/files/skylab-cmd.service
+++ b/recipes-flir/skylab/files/skylab-cmd.service
@@ -6,7 +6,8 @@ After=network-online.target
 Type=simple
 ExecStart=/usr/bin/skylab-cmd \
 			      --verbosity=3 \
-			      --client-bind-endpoint=tcp://*:5551
+			      --client-bind-endpoint=tcp://*:5551 \
+				  --fileio-bind-endpoint=tcp://*:5552
 Restart=on-failure
 
 [Install]
