[ES-1919][BC-48] Reduce rootfs size
This reduces the rootfs size with ~28 MB and the ext4-image size with ~38
MB.

* evco.conf and eoco.conf: Do not include unnecessary firmware. Primarily
  the epdc fw for electronic ink display controllers is large in size
  (~4MB)

* packagegroup-flir-common:
  python3: Do not include both python2 and python3. Python3 is needed by
  some packages and python2 is not maintined anymore. Use Python3.
  tzdata -> tzdata-core: tzdata now includes *all* timezone data which is a
  lot. tzdata-core gives the same data that we have in older systems.

* nano: Newer versions of the nano recipe pull in "file" as a dependency.
  "file" comes with a database that is huge. Remove the "file" dependency
  since it is not needed to run nano.

* kernel-modules: Skip building and including a number of multimedia
  (tv/radio) kernel modules.

--- a/conf/machine/evco.conf
+++ b/conf/machine/evco.conf
@@ -7,10 +7,9 @@
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa9.inc
 SERIAL_CONSOLES = "115200;ttymxc0"
-MACHINE_FIRMWARE_append_mx6 = " linux-firmware-ath6k"
 MACHINE_FEATURES += "pci wifi bluetooth"
 # removed from sabresd-common's MACHINE_FEATURES:  bcm4339 bcm43455
-
+# removed from sabresd-common's MACHINE_FIRMWARE: linux-firmware-ath6k
 MACHINEOVERRIDES =. "mx6:mx6dl:"
 
 # FIXME: Switch over to our own u-boot-pingu
@@ -53,6 +52,8 @@ UBOOT_ENTRYPOINT = "0x10800000"
 
 # Firmware
 MACHINE_FIRMWARE ?= ""
+# Do not include epdc firmware for electronic ink display controller (saves ~4M)
+MACHINE_FIRMWARE_remove = "firmware-imx-epdc"
 # FIXME: Uncomment this?
 #MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx6q"
 
