--- a/conf/machine/eoco.conf
+++ b/conf/machine/eoco.conf
@@ -7,7 +7,6 @@
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa9.inc
 SERIAL_CONSOLES = "115200;ttymxc0"
-MACHINE_FIRMWARE_append_mx6 = " linux-firmware-ath6k"
 MACHINE_FEATURES += "pci wifi bluetooth"
 # removed from sabresd-common's MACHINE_FEATURES:  bcm4339 bcm43455
 
@@ -53,6 +52,8 @@ UBOOT_ENTRYPOINT = "0x10800000"
 
 # Firmware
 MACHINE_FIRMWARE ?= ""
+# Do not include epdc firmware for electronic ink display controller (saves ~4M)
+MACHINE_FIRMWARE_remove = "firmware-imx-epdc"
 # FIXME: Uncomment this?
 #MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx6q"
 
