HABA-561 Add linux kernel 4.14 to yocto 3.3

--- a/conf/machine/ec201.conf
+++ b/conf/machine/ec201.conf
@@ -10,8 +10,9 @@ require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa7.inc
 
 PREFERRED_PROVIDER_virtual/kernel_ec201 = "linux-pingu"
-PREFERRED_VERSION_linux-pingu = "5.10%"
+PREFERRED_VERSION_linux-pingu = "4.14%"
 
+MACHINE_EXTRA_RRECOMMENDS_remove = "kernel-module-nxp89xx linux-firmware-nxp89xx"
 MACHINE_FEATURES += "wifi bluetooth"
 
 KERNEL_DEVICETREE += "imx7ulp-sherlock.dtb"
