--- a/recipes-connectivity/uMTP-responder/files/eoco/umtprd.conf
+++ b/recipes-connectivity/uMTP-responder/files/eoco/umtprd.conf
@@ -10,7 +10,7 @@ loop_on_disconnect 1
 #storage command : Create add a storage entry point. Up to 16 entry points supported
 #Syntax : storage "PATH" "NAME"
 
-storage "/FLIR/images"      "Images"
+storage "/FLIR/internal"      "Internal"
 storage "/media/autofs/mmcblk1p1"      "SDcard"
 #storage "/home"  "home folder"
 
