charge.target: activate charge target
charge.target might be activated by original u-boot
(when usb is attached while inserting battery)
If we do not define any charge.target, systemd will enter rescue.target
(This is why we have seen strange boot behaviour)

Until we have made u-boot behave "better" we need to define a
systemd charge.target

weston-init recipe tweaked to satisfy "all" FLIR platforms, edits to
weston.service selection/addition

Note that weston.service is now installed into charge.target (for mx6)
(chargeapp will be usable)
Also gadget.service (usb will be usable in charge.target)
Question mark on behaviour when usbmode "uvc" is present...

--- a/recipes-connectivity/gadgetload/files/gadget.service
+++ b/recipes-connectivity/gadgetload/files/gadget.service
@@ -9,4 +9,4 @@ ExecStop=/sbin/gadget.sh unload
 RemainAfterExit=yes
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=multi-user.target charge.target
