HABA Remove unused packages from ec401w image
* gstreamer
* weston
* wayland
* pulseaudio
* alsa

--- a/conf/machine/ec401w.conf
+++ b/conf/machine/ec401w.conf
@@ -27,8 +27,9 @@ UBOOT_CONFIG[sd-optee] = "mx7ulp_evk_optee_config,sdcard"
 UBOOT_CONFIG[emmc]     = "mx7ulp_evk_emmc_config,sdcard"
 UBOOT_CONFIG[mfgtool]  = "mx7ulp_evk_config"
 
-MACHINE_SOCARCH_SUFFIX = "-mx7ulp"
-MACHINE_SOCARCH_FILTER_append_mx7ulp = "virtual/libopenvg virtual/libgles1 virtual/libgles2 virtual/egl virtual/mesa virtual/libgl virtual/libg2d"
+IMAGE_INSTALL_remove = "packagegroup-flir-gstreamer"
+DISTRO_FEATURES_remove = "wayland alsa pulseaudio"
+
 IMX_DEFAULT_KERNEL_mx7ulp = "linux-imx"
 
 # Set Serial console
