ec401w: Wlan/bt startup order
btload start before bluetooth.service

Don't start connman which is unused

Start wlanload after wpa_supplicant

--- a/recipes-connectivity/wlanload/files/ec401w/wlanload.service
+++ b/recipes-connectivity/wlanload/files/ec401w/wlanload.service
@@ -1,7 +1,6 @@
 [Unit]
 Description=WLAN loader
-# wait for network to come up before we run
-After=network.target
+After=wpa_supplicant.service
 
 [Service]
 Type=forking
