lighttpd: (re-)added mod_dynamicfile plugin [BC-77]
FLIR previously developed a lighttpd plugin called mod_dynamicfile
This one is important to be able to display live image in browser
with decent peformance
lighttpd has changed its internal plugin interface (again)
since 1.4.48 (yocto2.5, where mod_dynamicfile worked)
This plugin module has been ported to new interface and is
(re-)activated in platform

--- a/recipes-extended/lighttpd/files/lighttpd.conf
+++ b/recipes-extended/lighttpd/files/lighttpd.conf
@@ -4,6 +4,7 @@ server.modules = (
 	"mod_alias",
 	"mod_fastcgi",
 	"mod_rewrite",
+	"mod_dynamicfile",
 	"mod_access",
 	"mod_redirect",
 	"mod_cgi"
@@ -37,6 +38,8 @@ server.dir-listing          = "enable"
 
 #compress.cache-dir          = "/var/cache/lighttpd/compress/"
 #compress.filetype           = ( "application/x-javascript", "text/css", "text/html", "text/plain" )
+dynamic-file.include-extensions = ( ".jpg" )
+dynamic-file.retries        = 4
 
 #include_shell "/usr/share/lighttpd/create-mime.assign.pl"
 # mimetype mapping
