appcore: adaptations to get skylab to work
Enable lepton init using appocore instead of legacy ffc app

--- a/recipes-flir/skylab/files/skylab-cosw-adapter.service
+++ b/recipes-flir/skylab/files/skylab-cosw-adapter.service
@@ -1,10 +1,11 @@
 [Unit]
-Description=Skylab cmd
+Description=Skylab cosw adapter
+After=skylab-streamserver.service
 Before=skylab-cmd.service
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/ffc_3
+ExecStart=/usr/bin/skylab-cosw-adapter
 Restart=on-failure
 
 [Install]
