Added SDK support for Habanero
* Added missing SDK packages
* Added kernel v4.14 headers
* Updated bifrost

--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -154,6 +154,7 @@ PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-fw-utils"
 #PREFERRED_VERSION_u-boot-imx = "2018.03"
 #PREFERRED_VERSION_u-boot-fw-utils = "2018.03"
 
+PREFERRED_VERSION_linux-imx-headers ?= "5.10"
 PREFERRED_VERSION_linux-libc-headers_imx ?= "5.10"
 
 MACHINE_GSTREAMER_1_0_PLUGIN_mx6ul = "imx-gst1.0-plugin"
